optimize and clean code about account